# naunet_klu_primordial

./: .gitignore  CMakeLists.txt  naunet_config.toml
include/: naunet.h  naunet_constants.h  naunet_data.h  naunet_macros.h  naunet_ode.h  naunet_physics.h  naunet_renorm.h  naunet_timer.h  naunet_utilities.h
src/: CMakeLists.txt  naunet.cpp  naunet_constants.cpp  naunet_fex.cpp  naunet_jac.cpp  naunet_physics.cpp  naunet_rates.cpp  naunet_renorm.cpp  naunet_utilities.cpp
test/: singlegrid.cpp
tests/: CMakeLists.txt  multiplegrid.cpp  singlegrid.cpp  singlegrid.py.in
